@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.199 2006/09/30 20:33:12 arnoldmnl Exp $
+$Id: ChangeLog,v 1.200 2007/02/03 11:01:06 auroramsx Exp $
+
+2007-11-19  Arnold Metselaar <arnold@nilgiris>
+   * video.asm (cls_text): move cursor (CSRY,CSRX) to top left corner.
+   * chput.asm (chput_ctrl_ff,chput_esc_e,chput_esc_j): equate to cls; 
+     the updated cls ends with chput_ctrl_home now.
 
 2007-02-03  Eric Boon <eric@auroramsx.nl>
    * Split off INLIN from main
